--- a/Vacinas_Aprovadas.html
+++ b/Vacinas_Aprovadas.html
@@ -27,12 +27,12 @@
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="#">Quem Somos</a> </li>
                 <li><a href="Boletim.html"> Boletim</a> </li>
-                <li><a href="Vacinas_Aprovadas.html"> Vacinas</a></li>
+                <li><a href="#"> Vacinas</a></li>
                 <li><a href="#">Campanha de Vacinação</a>
                     <ul>
                         <li> <a href="#">Galeria</a></li>
                         <li><a href="#">Protocolos</a></li>
-                        <li><a href="Tratamento.html">Tratamento</a></li>
+                        <li><a href="#">Tratamento</a></li>
                         <li><a href="#">Entre na fila</a></li>
                     </ul>
                 </li>
@@ -55,24 +55,7 @@
 
 
     <main>
-        <img id="banner" src="Imagens/banner.jpg" alt="O que é covid?">
-
-        <section class="conteudo">
-            <img class="img_main" src="Imagens/slide3.jpeg" alt="O que é">
-            <img class="img_main" src="Imagens/slide1.jpeg" alt="O que você precisa saber">
-            <iframe class="img_main" src="https://www.youtube.com/embed/eUxx6ev16Wk" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </section>
-
-        <!-- Libras -->
-        <div vw class="enabled">
-            <div vw-access-button class="active"></div>
-            <div vw-plugin-wrapper>
-                <div class="vw-plugin-top-wrapper"></div>
-            </div>
-        </div>
+        
     </main>
 
     <footer>
