adiciona tratamento.html no menu

--- a/Tratamento.html
+++ b/Tratamento.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li> <a href="#">Galeria</a></li>
                         <li><a href="#">Protocolos</a></li>
-                        <li><a href="#">Tratamento</a></li>
+                        <li><a href="Tratamento.html">Tratamento</a></li>
                         <li><a href="#">Entre na fila</a></li>
                     </ul>
                 </li>
