atualiza pg vacinas
Atualiza páginas de vacinas

--- a/Vacinas_Aprovadas.html
+++ b/Vacinas_Aprovadas.html
@@ -83,19 +83,19 @@
 					</div>					
 				</section>
 				<section class="box_vacinas">
-					<h1 id="vacina_dois">Comirnaty (Pfizer/Wyeth)</h1>
-					<div id="box_dois">
+					<h1 id="vacina_dois">Coronavac (Butantan)</h1>
+					<div id="box_dois">						
 						<h3>Sobre</h3>
 							<p>
-								Tecnologia: RNA mensageiro sintético.
+								Tecnologia: antígeno do vírus inativado. Uso emergencial aprovado em 17/01/2021.
 							</p>
 						<h3>Métodos</h3>
 							<p>
-								Quantidade de doses para imunização: duas doses. A segunda dose deve ser aplicada com um intervalo maior ou igual a 21 dias após a primeira. Faixa etária autorizada: a partir de 12 anos.  
+								Quantidade de doses para imunização: duas doses. A segunda dose deve ser aplicada entre 2 e 4 semanas após a primeira. Faixa etária autorizada: a partir de 18 anos.   
 							</p>
 						<h3>Eficácia</h3>
 						<p>
-							Os dados do estudo de Fase 3 demonstraram que, embora haja proteção parcial após cerca de 12 dias da primeira dose, são necessárias duas doses da vacina para que o potencial máximo de proteção contra a doença seja atingido. Os resultados de eficácia global da vacina, de 95%, foram aferidos a partir de 7 dias da segunda dose do esquema vacinal.
+							A eficácia da CoronaVac para casos sintomáticos atingiu 50,7% com 14 dias de intervalo entre as duas doses, mais do que os 50,38% divulgados em janeiro com base nos dados iniciais do estudo clínico de fase 3. Além disso, a eficácia global, que aponta a capacidade que o imunizante tem de proteger em casos leves, moderados ou graves, pode chegar a 62,3% se o espaço entre as duas doses for de 21 dias ou mais.
 						</p>
 					</div>	
 				</section>
