--- a/Tratamento.html
+++ b/Tratamento.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/home.css">
 	<link rel="stylesheet" href="CSS/styleTratamento.css">
     <script type="text/javascript" src="JS/jquery-3.6.0.min.js"></script>
-    <title>Home</title>
+    <title>Tratamentos</title>
     <!-- Libras -->
     <script src="JS/scriptTratamento.js"></script>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
@@ -28,10 +28,10 @@
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="#">Quem Somos</a> </li>
                 <li><a href="Boletim.html"> Boletim</a> </li>
-                <li><a href="#"> Vacinas</a></li>
+                <li><a href="Vacinas_Aprovadas.html"> Vacinas</a></li>
                 <li><a href="#">Campanha de Vacinação</a>
                     <ul>
-                        <li> <a href="#">Galeria</a></li>
+                        <li><a href="#">Galeria</a></li>
                         <li><a href="#">Protocolos</a></li>
                         <li><a href="Tratamento.html">Tratamento</a></li>
                         <li><a href="#">Entre na fila</a></li>
