--- a/Vacinas_Aprovadas.html
+++ b/Vacinas_Aprovadas.html
@@ -61,6 +61,9 @@
 
     <main>
         <section class="flex_pai_vacinas">
+				<div id="dialog" title="Basic dialog">
+					<p>Para saber mais sobre o andamento da vacinação em Varginha, siga para a página de <a href="Boletim.html"> Boletim </a> </p>
+			  	</div>
 				<h1> Vacinas Covid-19 </h1>
 				<h3>Atualmente existem quatro formas para uma vacina contra Covid-19 ser disponibilizada no país: registro, uso emergencial, importação excepcional ou pelo consórcio Covax Facility. No momento há quatro vacinas aprovadas sendo utilizadas no país, clique em cada uma para saber mais.</h3>
 
