--- a/Boletim.html
+++ b/Boletim.html
@@ -9,10 +9,10 @@
 	<script src="JS/script_dados.js" type="text/javascript"></script>
     <title>Boletim</title>
     <!-- Libras -->
-    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <!-- <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
-    </script>
+    </script> -->
 </head>
 
 <body>
@@ -63,7 +63,7 @@
 				<h5> *Dados atualizados em 20/08/2021</h5>
 			</section>
 			<section class="box_num_leitos">
-				<img src="imagens/hospital.png" alt="injeção" id="img_hospital">
+				<img src="imagens/hospital_predio.png" alt="injeção" id="img_hospital">
 				<h1>Número de leitos </h1>
 				<h3> 159 leitos UTI e 300 leitos enfermaria </h3>
 				<h2> Disponíveis na UTI </h2>
@@ -292,7 +292,7 @@
         <a href="#topo"><img class="img_footer" src="Imagens/top.jpg" alt="Voltar para o top"></a>
     </footer>
 
-    <script src="JS/Home.js"></script>
+    <!-- <script src="JS/Home.js"></script> -->
 </body>
 
 </html>
