--- a/Vacinas_Aprovadas.html
+++ b/Vacinas_Aprovadas.html
@@ -103,36 +103,36 @@
 					</div>	
 				</section>
 				<section class="box_vacinas">
-					<h1 id="vacina_tres">Comirnaty (Pfizer/Wyeth)</h1>
+					<h1 id="vacina_tres">Janssen Vaccine (Janssen-Cilag)</h1>
 					<div id="box_tres">
 						<h3>Sobre</h3>
 							<p>
-								Tecnologia: RNA mensageiro sintético.
+								Tecnologia: vetores de adenovírus sorotipo 26 (Ad26). Prazo de validade: Quatro meses e meio quando armazenada na temperatura entre 2°C e 8°C. Após aberto, o frasco pode ser utilizado em até seis horas.
 							</p>
 						<h3>Métodos</h3>
 							<p>
-								Quantidade de doses para imunização: duas doses. A segunda dose deve ser aplicada com um intervalo maior ou igual a 21 dias após a primeira. Faixa etária autorizada: a partir de 12 anos.  
+								Quantidade de doses para imunização: dose única. Faixa etária autorizada: a partir de 18 anos.  
 							</p>
 						<h3>Eficácia</h3>
 						<p>
-							Os dados do estudo de Fase 3 demonstraram que, embora haja proteção parcial após cerca de 12 dias da primeira dose, são necessárias duas doses da vacina para que o potencial máximo de proteção contra a doença seja atingido. Os resultados de eficácia global da vacina, de 95%, foram aferidos a partir de 7 dias da segunda dose do esquema vacinal.
+							Eficácia de 66% na prevenção de doenças moderadas e graves, em um ensaio global de Fase 3 e mais de 85% de eficácia contra doenças graves.
 						</p>
 					</div>	
 				</section>
 				<section class="box_vacinas">
-					<h1 id="vacina_quatro">Comirnaty (Pfizer/Wyeth)</h1>
+					<h1 id="vacina_quatro">Oxford/Covishield (Fiocruz e Astrazeneca)</h1>
 					<div id="box_quatro">
 						<h3>Sobre</h3>
 							<p>
-								Tecnologia: RNA mensageiro sintético.
+								Tecnologia: vetor adenovírus recombinante. Faixa etária autorizada: a partir de 18 anos. Observações importantes: Comunicado GGMON 005/2021, que trata da suspensão imediata do uso da vacina contra a Covid-19 da AstraZeneca/Fiocruz em gestantes. Uso emergencial aprovado em 12/03/2021.
 							</p>
 						<h3>Métodos</h3>
 							<p>
-								Quantidade de doses para imunização: duas doses. A segunda dose deve ser aplicada com um intervalo maior ou igual a 21 dias após a primeira. Faixa etária autorizada: a partir de 12 anos.  
+								Quantidade de doses para imunização: duas doses. A segunda dose deve ser aplicada entre 4 e 12 semanas após a primeira. 
 							</p>
 						<h3>Eficácia</h3>
 						<p>
-							Os dados do estudo de Fase 3 demonstraram que, embora haja proteção parcial após cerca de 12 dias da primeira dose, são necessárias duas doses da vacina para que o potencial máximo de proteção contra a doença seja atingido. Os resultados de eficácia global da vacina, de 95%, foram aferidos a partir de 7 dias da segunda dose do esquema vacinal.
+							Eficácia  a vacina demonstrou eficácia de 73% 22 dias após a primeira dose (em um período de pelo menos três meses) e com forte indicativo de aumento da resposta imune quando a segunda dose é fornecida em intervalo de três meses, o que propicia um aumento de cerca de 7,5 vezes nos níveis da resposta      humoral (produção de anticorpos).
 						</p>
 					</div>	
 				</section>
