--- a/Vacinas_Aprovadas.html
+++ b/Vacinas_Aprovadas.html
@@ -132,7 +132,7 @@
 							</p>
 						<h3>Eficácia</h3>
 						<p>
-							Eficácia  a vacina demonstrou eficácia de 73% 22 dias após a primeira dose (em um período de pelo menos três meses) e com forte indicativo de aumento da resposta imune quando a segunda dose é fornecida em intervalo de três meses, o que propicia um aumento de cerca de 7,5 vezes nos níveis da resposta      humoral (produção de anticorpos).
+							A vacina demonstrou eficácia de 73% 22 dias após a primeira dose (em um período de pelo menos três meses) e com forte indicativo de aumento da resposta imune quando a segunda dose é fornecida em intervalo de três meses, o que propicia um aumento de cerca de 7,5 vezes nos níveis da resposta      humoral (produção de anticorpos).
 						</p>
 					</div>	
 				</section>
