Adiciona html atualizados

--- a/Cadastro.html
+++ b/Cadastro.html
@@ -25,13 +25,13 @@
         <nav>
             <ul class="menu">
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="#">Quem Somos</a> </li>
+                <li><a href="Quem-somos.html">Quem Somos</a> </li>
                 <li><a href="Boletim.html"> Boletim</a> </li>
                 <li><a href="Vacinas_Aprovadas.html"> Vacinas</a></li>
                 <li><a href="#">Campanha de Vacinação</a>
                     <ul>
-                        <li> <a href="#">Galeria</a></li>
-                        <li><a href="#">Protocolos</a></li>
+                        <li> <a href="galeria.html">Galeria</a></li>
+                        <li><a href="protocolos.html">Protocolos</a></li>
                         <li><a href="Tratamento.html">Tratamento</a></li>
                         <li><a href="Cadastro.html">Entre na fila</a></li>
                     </ul>
@@ -210,6 +210,7 @@
                             <option value="5">Transportes dos transportes coletivos</option>
                             <option value="6">Motoristas de carga (ex.caminhoneiro)</option>
                             <option value="7">Não faço parte de nenhum grupo prioritário acima</option>
+                            <option value="8">Outra</option>
                         </select>
                     </p>
 
