--- a/Tratamento.html
+++ b/Tratamento.html
@@ -26,15 +26,15 @@
         <nav>
             <ul class="menu">
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="#">Quem Somos</a> </li>
+                <li><a href="Quem-somos.html">Quem Somos</a> </li>
                 <li><a href="Boletim.html"> Boletim</a> </li>
                 <li><a href="Vacinas_Aprovadas.html"> Vacinas</a></li>
                 <li><a href="#">Campanha de Vacinação</a>
                     <ul>
-                        <li><a href="#">Galeria</a></li>
-                        <li><a href="#">Protocolos</a></li>
+                        <li><a href="galeria.html">Galeria</a></li>
+                        <li><a href="protocolos.html">Protocolos</a></li>
                         <li><a href="Tratamento.html">Tratamento</a></li>
-                        <li><a href="#">Entre na fila</a></li>
+                        <li><a href="Cadastro.html">Entre na fila</a></li>
                     </ul>
                 </li>
             </ul>
@@ -234,16 +234,14 @@
 		</div>
   
 		<div class="botoesUm">
-		  <button id="btn1">slideUp</button>
-		  <button id="btn2">slideDown</button>
-		  <button id="btn3">slideToggle</button>
+		  <button id="btn2">Saber mais sobre as recomendações</button>
+		  <button id="btn1">Ocultar</button>
 		  <img id="imagemRecomendacoes" src="Imagens/recomendacoes.png"	alt="Recomendações, tratamento Covid-19"/>
 		</div>
   
 		<div class="botoesDois">
-		  <button id="btn4">fadeOut</button>
-		  <button id="btn5">fadeIn</button>
-		  <button id="btn6">fadeToggle</button>
+		  <button id="btn5">Saber mais sobre as recomendações</button>
+		  <button id="btn4">Ocultar</button>
 		  <img id="imagemOqueFazer" src="Imagens/oquefazer.png"	alt="O que fazer: cuidados e isolamento!" />
 		</div>
   
