--- a/Boletim.html
+++ b/Boletim.html
@@ -9,10 +9,10 @@
 	<script src="JS/script_dados.js" type="text/javascript"></script>
     <title>Boletim</title>
     <!-- Libras -->
-    <!-- <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
-    </script> -->
+    </script>
 </head>
 
 <body>
@@ -21,15 +21,15 @@
         <nav>
             <ul class="menu">
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="#">Quem Somos</a> </li>
+                <li><a href="Quem-somos.html">Quem Somos</a> </li>
                 <li><a href="Boletim.html"> Boletim</a> </li>
                 <li><a href="Vacinas_Aprovadas.html"> Vacinas</a></li>
                 <li><a href="#">Campanha de Vacinação</a>
                     <ul>
-                        <li> <a href="#">Galeria</a></li>
-                        <li><a href="#">Protocolos</a></li>
+                        <li> <a href="galeria.html">Galeria</a></li>
+                        <li><a href="protocolos.html">Protocolos</a></li>
                         <li><a href="Tratamento.html">Tratamento</a></li>
-                        <li><a href="#">Entre na fila</a></li>
+                        <li><a href="Cadastro.html">Entre na fila</a></li>
                     </ul>
                 </li>
             </ul>
@@ -277,6 +277,13 @@
 					</table>				
 				</section>
 		</section>
+		<!-- Libras -->
+		<div vw class="enabled">
+			<div vw-access-button class="active"></div>
+			<div vw-plugin-wrapper>
+				<div class="vw-plugin-top-wrapper"></div>
+			</div>
+		</div>
 	</main>	
     <footer>
         <p>&copy;Todos os direitos reservados</p>
