--- a/protocolos.html
+++ b/protocolos.html
@@ -27,7 +27,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="#">Quem Somos</a> </li>
+                <li><a href="Quem-somos.html">Quem Somos</a> </li>
                 <li><a href="Boletim.html"> Boletim</a> </li>
                 <li><a href="Vacinas_Aprovadas.html"> Vacinas</a></li>
                 <li><a href="#">Campanha de Vacinação</a>
@@ -35,7 +35,7 @@
                         <li> <a href="galeria.html">Galeria</a></li>
                         <li><a href="protocolos.html">Protocolos</a></li>
                         <li><a href="Tratamento.html">Tratamento</a></li>
-                        <li><a href="#">Entre na fila</a></li>
+                        <li><a href="Cadastro.html">Entre na fila</a></li>
                     </ul>
                 </li>
             </ul>
